--- a/Модель_для_экстраполяции_результата_на_другие_наборы_данных".ipynb
+++ b/Модель_для_экстраполяции_результата_на_другие_наборы_данных".ipynb
@@ -186,7 +186,7 @@
         "\n",
         "model.fit(X_train, y_train)\n",
         "\n",
-        "# ======================== Последний вариант вывода результатов ========================\n",
+        "# ======================== Вывод результатов ========================\n",
         "# Оценка модели\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
@@ -481,7 +481,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Убедитесь, что у вас есть правильная схема для вашего GeoDataFrame\n",
+        "# Убедитесь, что  схема для GeoDataFrame правильная\n",
         "schema = {\n",
         "    'geometry': 'MultiPolygon',  # Замените на нужный тип геометрии\n",
         "    'properties': {'0': 'str'}  # Используем имя столбца '0' как строку\n",
